[Extensions Mac A11y] Don't VoiceOver the icon in the install dialog

The icon in the install dialog is just the icon of the extension, whose
name is included in the title. Currently, this icon simply says "image"
when VoiceOver is used to highlight the element.

We could add an alt-text of "<Extension name> icon", but this doesn't
add any additional context beyond what the title (immediately before
the image) provides. Instead, remove the icon from the VoiceOver tree
entirely.

Bug: 747624
Change-Id: Ic5373ca4a766b72696839062ffa89d8780d97e35
Reviewed-on: https://chromium-review.googlesource.com/701918
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506617}
Former-commit-id: e93c564e8644d2a49b6bd00d5140ef4687a2bb6a